// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchFeedback should render a FeedbackButton if results are found and the query is not empty 1`] = `
<React.Fragment>
  <SearchFeedback__FeedbackButton>
    <SearchFeedback__FeedbackLink
      to={
        Object {
          "payload": Object {
            "city": "augsburg",
            "language": "de",
          },
          "query": Object {
            "feedback": "down",
          },
          "type": "SEARCH",
        }
      }
    >
      informationNotFound
    </SearchFeedback__FeedbackLink>
  </SearchFeedback__FeedbackButton>
  <FeedbackModal
    cities={
      Array [
        CityModel {
          "_code": "augsburg",
          "_eventsEnabled": true,
          "_extrasEnabled": false,
          "_live": true,
          "_name": "Augsburg",
          "_sortingName": "Augsburg",
        },
      ]
    }
    commentMessage="wantedInformation"
    extras={null}
    feedbackStatus="up"
    location={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "query": Object {
          "feedback": "up",
        },
        "type": "SEARCH",
      }
    }
    query="ab"
  />
</React.Fragment>
`;

exports[`SearchFeedback should render a NothingFoundFeedbackBox if no results are found 1`] = `
<React.Fragment>
  <SearchFeedback__FeedbackContainer>
    <div>
      nothingFound
    </div>
    <Translate(NothingFoundFeedbackBox)
      location={
        Object {
          "payload": Object {
            "city": "augsburg",
            "language": "de",
          },
          "query": Object {
            "feedback": "up",
          },
          "type": "SEARCH",
        }
      }
      query="abc"
    />
  </SearchFeedback__FeedbackContainer>
  <FeedbackModal
    cities={
      Array [
        CityModel {
          "_code": "augsburg",
          "_eventsEnabled": true,
          "_extrasEnabled": false,
          "_live": true,
          "_name": "Augsburg",
          "_sortingName": "Augsburg",
        },
      ]
    }
    commentMessage="wantedInformation"
    extras={null}
    feedbackStatus="up"
    location={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "query": Object {
          "feedback": "up",
        },
        "type": "SEARCH",
      }
    }
    query="abc"
  />
</React.Fragment>
`;

exports[`SearchFeedback should render neither a NothingFoundFeedbackBox nor a FeedbackButton 1`] = `
<React.Fragment>
  <FeedbackModal
    cities={
      Array [
        CityModel {
          "_code": "augsburg",
          "_eventsEnabled": true,
          "_extrasEnabled": false,
          "_live": true,
          "_name": "Augsburg",
          "_sortingName": "Augsburg",
        },
      ]
    }
    commentMessage="wantedInformation"
    extras={null}
    feedbackStatus="up"
    location={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "query": Object {
          "feedback": "up",
        },
        "type": "SEARCH",
      }
    }
    query=""
  />
</React.Fragment>
`;
